force-app/main/default/objects/Service_Line__c/Service_Line__c.object-meta.xml
<CustomObject>
    <label>Service Line</label>
    <nameField>
        <label>Service Line  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>