force-app/main/default/objects/Service_Line__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Service Lines</relationshipLabel>
    <relationshipName>Service_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>