force-app/main/default/objects/Service_Line__c/fields/Lifecycle_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lifecycle Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Lines2</relationshipName>
    <type>Lookup</type>
</CustomField>