force-app/main/default/objects/Service_Line__c/fields/Service_Line_Manager__c.field-meta.xml
<CustomField>
    <fullName>Service_Line_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Line Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>