force-app/main/default/objects/Service_Line__c/fields/Service_Line_Onboarded__c.field-meta.xml
<CustomField>
    <fullName>Service_Line_Onboarded__c</fullName>
    <label>Service Line Onboarded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>