force-app/main/default/objects/Service_Line__c/fields/Service_Line_Partner__c.field-meta.xml
<CustomField>
    <fullName>Service_Line_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Line Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>