force-app/main/default/objects/Service_Line__c/fields/Type_Area__c.field-meta.xml
<CustomField>
    <fullName>Type_Area__c</fullName>
    <label>Type Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_Area</valueSetName>
    </valueSet>
</CustomField>